--- a/index.html
+++ b/index.html
@@ -104,25 +104,25 @@
 						<select name="category_id" class="category_id">
 							<option value="">Tất cả sản phẩm</option>
 							<option value="">Theo tiêu đề</option>
-							<option value="">　アズールレーン</option>
-							<option value="">　アークナイツ</option>
-							<option value="">　雀魂</option>
-							<option value="">　ブルーアーカイブ</option>
-							<option value="">　エーテルゲイザー</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
 							<option value="">Theo danh mục</option>
-							<option value="">　書籍・イラスト集</option>
-							<option value="">　映像・音楽・メディア</option>
-							<option value="">　缶バッジ・アクリル製品</option>
-							<option value="">　フィギュア・ぬいぐるみ</option>
-							<option value="">　タペストリー・ポスター</option>
-							<option value="">　ブロマイド・アルバム</option>
-							<option value="">　モバイル・ガジェット</option>
-							<option value="">　抱き枕カバー・インテリア</option>
-							<option value="">　アパレル・アクセサリー</option>
-							<option value="">　文具・デスク用品</option>
-							<option value="">　タオル・ハンカチ類</option>
-							<option value="">　キッチン用品・カトラリー</option>
-							<option value="">　食品・飲料</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
+							<option value="">.</option>
 						</select>
 
 		</div>
@@ -225,157 +225,156 @@
 <!-- ▼カテゴリナビ(PC) -->
 		
 
-
-
 <div class="ec-categoryNaviRole">
-<div class="ec-itemNav">
+	<div class="ec-itemNav">
 	<ul class="ec-itemNav__nav">
 						<li>
 								<a href="">
 		Chủ đề sản phảm
 	</a>
-
+	
 		<ul>
 						<li>
 								<a href="">
-		アズールレーン
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		アークナイツ
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		雀魂
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		ブルーアーカイブ
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		エーテルゲイザー
+		.
 	</a>
-
-
+	
+	
 			</li>
 				</ul>
-
+	
 			</li>
 						<li>
 								<a href="">
 		Danh mục sản phẩm
 	</a>
-
+	
 		<ul>
 						<li>
 								<a href="">
-		書籍・イラスト集
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		映像・音楽・メディア
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		缶バッジ・アクリル製品
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		フィギュア・ぬいぐるみ
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		タペストリー・ポスター
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		ブロマイド・アルバム
+		.
 	</a>
-
-
-			</li>
-						<li>
-								<a href="=">
-		モバイル・ガジェット
-	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		抱き枕カバー・インテリア
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		アパレル・アクセサリー
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		文具・デスク用品
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		タオル・ハンカチ類
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		キッチン用品・カトラリー
+		.
 	</a>
-
-
+	
+	
 			</li>
 						<li>
 								<a href="">
-		食品・飲料
+		.
 	</a>
-
-
+	
+	
+			</li>
+						<li>
+								<a href="">
+		.
+	</a>
+	
+	
 			</li>
 				</ul>
-
+	
 			</li>
-</div>
-</div>
+	</div>
+	</div>
+
 
 	<!-- ▲カテゴリナビ(PC) -->
 
