--- a/signup.html
+++ b/signup.html
@@ -23,29 +23,29 @@
 <form method="get" class="searchform" action="">
 <div class="ec-headerSearch__category">
 	<div class="ec-select ec-select_search">
-					<select name="category_id" class="category_id">
-						<option value="">Tất cả sản phẩm</option>
-						<option value="">Theo tiêu đề</option>
-						<option value="">　アズールレーン</option>
-						<option value="">　アークナイツ</option>
-						<option value="">　雀魂</option>
-						<option value="">　ブルーアーカイブ</option>
-						<option value="">　エーテルゲイザー</option>
-						<option value="">Theo danh mục</option>
-						<option value="">　書籍・イラスト集</option>
-						<option value="">　映像・音楽・メディア</option>
-						<option value="">　缶バッジ・アクリル製品</option>
-						<option value="">　フィギュア・ぬいぐるみ</option>
-						<option value="">　タペストリー・ポスター</option>
-						<option value="">　ブロマイド・アルバム</option>
-						<option value="">　モバイル・ガジェット</option>
-						<option value="">　抱き枕カバー・インテリア</option>
-						<option value="">　アパレル・アクセサリー</option>
-						<option value="">　文具・デスク用品</option>
-						<option value="">　タオル・ハンカチ類</option>
-						<option value="">　キッチン用品・カトラリー</option>
-						<option value="">　食品・飲料</option>
-					</select>
+		<select name="category_id" class="category_id">
+			<option value="">Tất cả sản phẩm</option>
+			<option value="">Theo tiêu đề</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">Theo danh mục</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+			<option value="">.</option>
+		</select>
 
 	</div>
 </div>
@@ -160,35 +160,35 @@
 	<ul>
 					<li>
 							<a href="">
-	アズールレーン
+	.
 </a>
 
 
 		</li>
 					<li>
 							<a href="">
-	アークナイツ
+	.
 </a>
 
 
 		</li>
 					<li>
 							<a href="">
-	雀魂
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ4OTE=">
-	ブルーアーカイブ
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ2ODY=">
-	エーテルゲイザー
+							<a href="">
+	.
 </a>
 
 
@@ -197,98 +197,98 @@
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ4MjY=">
+							<a href="">
 	Danh mục sản phẩm
 </a>
 
 	<ul>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ4Nzg=">
-	書籍・イラスト集
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ3MzE=">
-	映像・音楽・メディア
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ4NTk=">
-	缶バッジ・アクリル製品
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ4MDg=">
-	フィギュア・ぬいぐるみ
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ3NDc=">
-	タペストリー・ポスター
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ2OTk=">
-	ブロマイド・アルバム
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ2ODM=">
-	モバイル・ガジェット
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ2NTE=">
-	抱き枕カバー・インテリア
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ2Njc=">
-	アパレル・アクセサリー
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ3MTU=">
-	文具・デスク用品
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ4MzA=">
-	タオル・ハンカチ類
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ3NjM=">
-	キッチン用品・カトラリー
+							<a href="">
+	.
 </a>
 
 
 		</li>
 					<li>
-							<a href="https://shop.yostar.co.jp/products/list?category_id=MTExODQ3ODI=">
-	食品・飲料
+							<a href="">
+	.
 </a>
 
 
@@ -312,7 +312,7 @@
 					</div>
 	<div class="ec-off1Grid">
 		<div class="ec-off1Grid__cell">
-			<form method="post" action="https://shop.yostar.co.jp/entry" novalidate class="h-adr">
+			<form method="post" action="/signup.html" novalidate class="h-adr">
 				<span class="p-country-name" style="display:none;">Japan</span>
 				<input type="hidden"  id="entry__token" name="entry[_token]" value="v3NMrlbZtcMCLfHz5h0x9WxUDoUc8m4LnNik3h09wzo" />
 				<div class="ec-borderedDefs">
@@ -330,7 +330,7 @@
 
 							<div class="ec-halfInput">
 								<span  style="width: 100%; float: left">
-									<input type="text"  id="entry_customer_name" name="entry[customer_name]" required="required" placeholder="姓名" />
+									<input type="text"  id="entry_customer_name" name="entry[customer_name]" required="required" placeholder="Bắt buộc" />
 									
 								</span>
 							</div>
