--- a/index.html
+++ b/index.html
@@ -104,25 +104,12 @@
 						<select name="category_id" class="category_id">
 							<option value="">Tất cả sản phẩm</option>
 							<option value="">Theo tiêu đề</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
+							<option value=""> Blue Archive</option>
+							<option value=""> Arknight</option>
 							<option value="">Theo danh mục</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
-							<option value="">.</option>
+							<option value=""> Standee/Figures</option>
+							<option value=""> Phụ kiện</option>
+							<option value=""> Sách/Album</option>
 						</select>
 
 		</div>
@@ -214,7 +201,7 @@
 		<div class="ec-headerTitle__title">
 			<h1>
 				<a href="/index.html">
-											<img src="/Image/Panel.png">
+											<img src="/Image/Logos/Panel.png">
 				</a>
 			</h1>
 		</div>
@@ -327,51 +314,6 @@
 	
 	
 			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-				</ul>
-	
-			</li>
 	</div>
 	</div>
 
@@ -394,24 +336,6 @@
 		<a href=""><div class="item slick-slide"><img src=""></div></a> 
 		<a href=""><div class="item slick-slide"><img src=""></div></a>
 	　  <a href=""><div class="item slick-slide"><img src=""></div></a>     
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
-	　  <a href=""><div class="item slick-slide"><img src=""></div></a>    
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
-		<a href=""><div class="item slick-slide"><img src=""></div></a>         
-		<a href=""><div class="item slick-slide"><img src=""></div></a>     
-		<a href=""><div class="item slick-slide"><img src=""></div></a>     
-		<a href=""><div class="item slick-slide"><img src=""></div></a>      
-		<a href=""><div class="item slick-slide"><img src=""></div></a>     
-		<a href=""><div class="item slick-slide"><img src=""></div></a>  
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
-		<a href=""><div class="item slick-slide"><img src=""></div></a>
 		<a href=""><div class="item slick-slide"><img src=""></div></a>
 	</div>
 </div>
@@ -773,7 +697,7 @@ opacity: 0.7;
 	<div class="ec-footerTitle">
 		<div class="ec-footerTitle__logo">
 			<a href="/index.html">
-								<img src="/Image/Panel-WT.png" style="width:300px">
+								<img src="/Image/Logos/Panel-WT.png" style="width:300px">
 				</a>
 		</div>
 		<div class="ec-footerTitle__copyright"></div>
