--- a/login.html
+++ b/login.html
@@ -25,25 +25,12 @@
 			<select name="category_id" class="category_id">
 				<option value="">Tất cả sản phẩm</option>
 				<option value="">Theo tiêu đề</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
+				<option value=""> Blue Archive</option>
+				<option value=""> Arknight</option>
 				<option value="">Theo danh mục</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
-				<option value="">.</option>
+				<option value=""> Standee/Figures</option>
+				<option value=""> Phụ kiện</option>
+				<option value=""> Sách/Album</option>
 			</select>
 
 		</div>
@@ -135,7 +122,7 @@
 		<div class="ec-headerTitle__title">
 			<h1>
 				<a href="/index.html">
-											<img src="/Image/Panel.png">
+											<img src="/Image/Logos/Panel.png">
 				</a>
 			</h1>
 		</div>
@@ -157,35 +144,14 @@
 		<ul>
 						<li>
 								<a href="">
-		.
+		Blue Archive
 	</a>
 	
 	
 			</li>
 						<li>
 								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
+		Arknights
 	</a>
 	
 	
@@ -201,7 +167,7 @@
 		<ul>
 						<li>
 								<a href="">
-		.
+		
 	</a>
 	
 	
@@ -356,7 +322,7 @@
 			<div class="ec-footerTitle">
 				<div class="ec-footerTitle__logo">
 					<a href="/index.html">
-										<img src="/Image/Panel-WT.png" style="width:300px">
+										<img src="/Image/Logos/Panel-WT.png" style="width:300px">
 						</a>
 				</div>
 				<div class="ec-footerTitle__copyright"></div>
