--- a/signup.html
+++ b/signup.html
@@ -26,25 +26,12 @@
 		<select name="category_id" class="category_id">
 			<option value="">Tất cả sản phẩm</option>
 			<option value="">Theo tiêu đề</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
+			<option value=""> Blue Archive</option>
+			<option value=""> Arknight</option>
 			<option value="">Theo danh mục</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
-			<option value="">.</option>
+			<option value=""> Standee/Figures</option>
+			<option value=""> Phụ kiện</option>
+			<option value=""> Sách/Album</option>
 		</select>
 
 	</div>
@@ -136,7 +123,7 @@
 	<div class="ec-headerTitle__title">
 		<h1>
 			<a href="/index.html">
-										<img src="/Image/Panel.png">
+										<img src="/Image/Logos/Panel.png">
 			</a>
 		</h1>
 	</div>
@@ -412,12 +399,12 @@
 								<label>
 											<input type="checkbox"  id="entry_user_policy_check" name="entry[user_policy_check]" required="required" value="1" />
 		
-									<a class="ec-link" href="https://shop.yostar.co.jp/help/agreement" target="_blank">Đồng ý với các điều khoản</a>
+									<a class="ec-link" href="" target="_blank">Đồng ý với các điều khoản</a>
 								</label>
 								
 							</div>
 							<button class="ec-blockBtn--action" type="submit" name="mode" value="confirm">Xác nhận</button>
-							<a class="ec-blockBtn--cancel" href="https://shop.yostar.co.jp/">Hủy bỏ</a>
+							<a class="ec-blockBtn--cancel" href="/index.html">Hủy bỏ</a>
 						</div>
 					</div>
 				</div>
@@ -437,7 +424,7 @@
 	<div class="ec-footerTitle">
 		<div class="ec-footerTitle__logo">
 			<a href="/index.html">
-								<img src="/Image/Panel-WT.png" style="width:300px">
+								<img src="/Image/Logos/Panel-WT.png" style="width:300px">
 				</a>
 		</div>
 		<div class="ec-footerTitle__copyright"></div>
