--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							<option value="">Tất cả sản phẩm</option>
 							<option value="">Theo tiêu đề</option>
 							<option value=""> Blue Archive</option>
-							<option value=""> Arknight</option>
+							<option value=""> Arknights</option>
 							<option value="">Theo danh mục</option>
 							<option value=""> Standee/Figures</option>
 							<option value=""> Phụ kiện</option>
@@ -214,8 +214,7 @@
 
 <div class="ec-categoryNaviRole">
 	<div class="ec-itemNav">
-	<ul class="ec-itemNav__nav">
-						<li>
+	<ul class="ec-itemNav__nav">						<li>
 								<a href="">
 		Chủ đề sản phảm
 	</a>
@@ -223,35 +222,14 @@
 		<ul>
 						<li>
 								<a href="">
-		.
+		Blue Archive
 	</a>
 	
 	
 			</li>
 						<li>
 								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
+		Arknights
 	</a>
 	
 	
@@ -267,51 +245,26 @@
 		<ul>
 						<li>
 								<a href="">
-		.
+		Standee/Figures
 	</a>
 	
 	
 			</li>
 						<li>
 								<a href="">
-		.
+		Phụ kiện
 	</a>
 	
 	
 			</li>
 						<li>
 								<a href="">
-		.
+		Sách/Album
 	</a>
 	
 	
 			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
+				</ul>
 	
 			</li>
 	</div>
@@ -436,27 +389,12 @@ opacity: 0.7;
 			<ul>
 				<li>
 					<a href="">
-						<img src="" alt="">
+						<img src="/Image/Banners/Blue_Archive_EN_logo.svg.png" alt="">
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="" alt="">
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="" alt="">
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="" alt="">
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="" alt="">
+						<img src="/Image/Banners/Arknights_English_Release_Logo.svg.png" alt="">
 					</a>
 				</li>
 
@@ -531,48 +469,48 @@ opacity: 0.7;
 		<ul class="ec-shelfGrid">
 								<li class="ec-shelfGrid__item">
 					<a href="">
-						<img src="">
+						<img src="/Image/Product/product_img1.jpg">
 						<p>&nbsp;</p>
 						<dl>
-							<dt class="item_name"></dt>
+							<dt class="item_name">Standee Reisa</dt>
 							<dd class="item_price">
-																		Đ
+																		299.000Đ
 																</dd>
 						</dl>
 					</a>
 				</li>
 								<li class="ec-shelfGrid__item">
 					<a href="">
-						<img src="">
+						<img src="/Image/Product/product_img2.jpg">
 						<p>&nbsp;</p>
 						<dl>
-							<dt class="item_name"></dt>
+							<dt class="item_name">Thẻ Arona</dt>
 							<dd class="item_price">
-																		Đ
+																		179.000Đ
 																</dd>
 						</dl>
 					</a>
 				</li>
 								<li class="ec-shelfGrid__item">
 					<a href="">
-						<img src="">
+						<img src="/image/Product/product_img6.jpg">
 						<p>&nbsp;</p>
 						<dl>
-							<dt class="item_name"></dt>
+							<dt class="item_name">Standee Amiya</dt>
 							<dd class="item_price">
-																		Đ
+																		299.000Đ
 																</dd>
 						</dl>
 					</a>
 				</li>
 								<li class="ec-shelfGrid__item">
 					<a href="">
-						<img src="">
+						<img src="/Image/Product/product_img7.jpg">
 						<p>&nbsp;</p>
 						<dl>
-							<dt class="item_name"></dt>
+							<dt class="item_name">Thú nhồi bông Bean Nian</dt>
 							<dd class="item_price">
-																		Đ
+																		512.000Đ
 																</dd>
 						</dl>
 					</a>
