--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
 			<option value="">Tất cả sản phẩm</option>
 			<option value="">Theo tiêu đề</option>
 			<option value=""> Blue Archive</option>
-			<option value=""> Arknight</option>
+			<option value=""> Arknights</option>
 			<option value="">Theo danh mục</option>
 			<option value=""> Standee/Figures</option>
 			<option value=""> Phụ kiện</option>
@@ -139,150 +139,59 @@
 <div class="ec-categoryNaviRole">
 <div class="ec-itemNav">
 <ul class="ec-itemNav__nav">
-					<li>
-							<a href="">
-	Chủ đề sản phảm
-</a>
-
-	<ul>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-			</ul>
-
-		</li>
-					<li>
-							<a href="">
-	Danh mục sản phẩm
-</a>
-
-	<ul>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-					<li>
-							<a href="">
-	.
-</a>
-
-
-		</li>
-			</ul>
-
-		</li>
+							<li>
+								<a href="">
+		Chủ đề sản phảm
+	</a>
+	
+		<ul>
+						<li>
+								<a href="">
+		Blue Archive
+	</a>
+	
+	
+			</li>
+						<li>
+								<a href="">
+		Arknights
+	</a>
+	
+	
+			</li>
+				</ul>
+	
+			</li>
+						<li>
+								<a href="">
+		Danh mục sản phẩm
+	</a>
+	
+		<ul>
+						<li>
+								<a href="">
+		Standee/Figures
+	</a>
+	
+	
+			</li>
+						<li>
+								<a href="">
+		Phụ kiện
+	</a>
+	
+	
+			</li>
+						<li>
+								<a href="">
+		Sách/Album
+	</a>
+	
+	
+			</li>
+				</ul>
+	
+			</li>
 </div>
 </div>
 <div class="ec-layoutRole__contents">
