--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 				<option value="">Tất cả sản phẩm</option>
 				<option value="">Theo tiêu đề</option>
 				<option value=""> Blue Archive</option>
-				<option value=""> Arknight</option>
+				<option value=""> Arknights</option>
 				<option value="">Theo danh mục</option>
 				<option value=""> Standee/Figures</option>
 				<option value=""> Phụ kiện</option>
@@ -167,91 +167,21 @@
 		<ul>
 						<li>
 								<a href="">
-		
+		Standee/Figures
 	</a>
 	
 	
 			</li>
 						<li>
 								<a href="">
-		.
+		Phụ kiện
 	</a>
 	
 	
 			</li>
 						<li>
 								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
-	</a>
-	
-	
-			</li>
-						<li>
-								<a href="">
-		.
+		Sách/Album
 	</a>
 	
 	
