--- a/index.html
+++ b/index.html
@@ -250,29 +250,27 @@
 			</div>
 			<!-- ▲カテゴリナビ(PC) -->
 		</div>
-		<div class="ec-layoutRole__contents">
-			<div class="ec-layoutRole__main">
-				<div class="ec-sliderRole">
-					<div class="main_visual">
-						<!--href:"product"-->
-						<a href="">
-							<div class="item slick-slide"><img src=""></div>
-						</a>
-						<a href="">
-							<div class="item slick-slide"><img src=""></div>
-						</a>
-						<a href="">
-							<div class="item slick-slide"><img src=""></div>
-						</a>
-						　 <a href="">
-							<div class="item slick-slide"><img src=""></div>
-						</a>
-						<a href="">
-							<div class="item slick-slide"><img src=""></div>
-						</a>
-					</div>
-				</div>
-				<div class="ec-layoutRole__mainBottom">
+	</div>
+</div>
+</div>
+
+	
+<div class="ec-layoutRole__contents">
+			
+			
+	<div class="ec-layoutRole__main">
+					
+						<div class="ec-sliderRole">
+	<div class="main_visual">
+
+		<!--href:"product"-->
+		<a href=""><div class="item slick-slide"><img src="/Image/Slick_slides/Slick_slide_01.jpg"></div></a>  
+		<a href=""><div class="item slick-slide"><img src="/Image/Slick_slides/Slick_slide_02.png"></div></a> 
+		<a href=""><div class="item slick-slide"><img src=""></div></a>
+	</div>
+</div>
+
+									<div class="ec-layoutRole__mainBottom">
 					<!-- ▼カテゴリ -->
 					<style>
 						@font-face {
